@@ -63,25 +63,6 @@
 #endif /*USE_DESCRIPTOR_PASSING*/
 
 
-#ifdef HAVE_W32_SYSTEM
-int
-wsa2errno (int err)
-{
-  switch (err)
-    {
-    case WSAENOTSOCK:
-      return EINVAL;
-    case WSAEWOULDBLOCK:
-      return EAGAIN;
-    case ERROR_BROKEN_PIPE:
-      return EPIPE;
-    default:
-      return EIO;
-    }
-}
-#endif
-
-
 /* Read from a unix domain socket using sendmsg. 
 
    FIXME: We don't need the buffering. It is a leftover from the time
@@ -173,7 +154,7 @@ uds_reader (assuan_context_t ctx, void *buf, size_t buflen)
 #else /*HAVE_W32_SYSTEM*/
   int res = recvfrom (HANDLE2SOCKET(ctx->inbound.fd), buf, buflen, 0, NULL, NULL);
   if (res < 0)
-    errno = wsa2errno (WSAGetLastError ());
+    errno = _assuan_sock_wsa2errno (WSAGetLastError ());
   return res;
 #endif /*HAVE_W32_SYSTEM*/
 }
@@ -205,7 +186,7 @@ uds_writer (assuan_context_t ctx, const void *buf, size_t buflen)
 		    (struct sockaddr *)&ctx->serveraddr,
 		    sizeof (struct sockaddr_in));
   if (res < 0)
-    errno = wsa2errno (WSAGetLastError ());
+    errno = _assuan_sock_wsa2errno (WSAGetLastError ());
   return res;
 #endif /*HAVE_W32_SYSTEM*/
 }
